# bookstore

./: .gitignore  Dockerfile  db.sqlite3  manage.py  pyproject.toml
bookstore/: settings.py
order/: factories.py
order/migrations/: 0001_initial.py  0002_product.py
order/models/: order.py
order/serializers/: order_serializer.py
order/serializers/tests/: test_example.py
order/serializers/tests/test_serializer/: test_product.py
order/serializers/tests/test_viewset/: test_order_viewset.py
order/tests/tests_viewset/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/product_tests/test_serializer/: test_category_serializer.py  test_product_serializer.py
product/product_tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/serializers/: category_serializer.py  product_serializer.py
product/viewsets/: product_viewset.py
